Basic html and css added

--- a/app/containers/app-container.css
+++ b/app/containers/app-container.css
@@ -1,17 +1,1 @@
-.home {
-  color: black;
-  text-align: center;
-}
-
-.mainContainer {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-}
-
-.mainContainer > div {
-  width: 50%;
-}
+ * { box-sizing: border-box; }
