--- a/app/components/dropdowns/char-select.css
+++ b/app/components/dropdowns/char-select.css
@@ -35,3 +35,20 @@
 .select span > span {
   font-size: 30px !important;
 }
+
+.featureHeader {
+  background-color: lightblue;
+  color: white;
+  text-align: center;
+  padding: 5px;
+}
+
+.featureBody {
+  border: 1px solid black;
+  border-top: none;
+  padding: 5px;
+}
+
+.feature {
+  margin-bottom: 15px;
+}
