--- a/app/components/order/simulate-trigger.css
+++ b/app/components/order/simulate-trigger.css
@@ -3,9 +3,8 @@
   display: block;
   color: white;
   background-color: #009a00;
-  padding: 10px;
+  padding: 10px 15px;
   border-radius: 8px;
-  width: 300px;
   margin: 5px auto;
   font-size: 15px;
   border: none;
