--- a/app/components/overview/overview.css
+++ b/app/components/overview/overview.css
@@ -1,16 +1,16 @@
 .overviewHeader {
-  background-color: lightblue;
+  background-color: #005fab;
   color: white;
+  padding: 10px;
   text-align: center;
-  padding: 5px;
 }
 
-.overviewBody {
-  border: 1px solid black;
+.overviewBody  {
   border-top: none;
-  padding: 5px;
+  padding: 10px;
 }
 
 .overview {
   margin-bottom: 15px;
+	box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
 }
