--- a/app/containers/header.css
+++ b/app/containers/header.css
@@ -1,40 +1,4 @@
-.container {
-  color: #4ca0ff;
-  border-bottom: 3px solid #4ca0ff;
-  margin-top: 0;
-  box-shadow: 1px 1px 1px #888;
-  padding: 5px;
-  margin-bottom: 20px;
-  position: relative;
-  height: 50px;
-  display: flex;
-}
-
-.title {
-  cursor: pointer;
-  font-size: 20px;
-  height: 100%;
-  margin: 10px;
-  vertical-align: bottom;
-  padding-top: 20px;
-}
-
-.extraContainer {
-  display: hidden;
-  position: absolute;
-  display: inline;
-  right: 50px;
-}
-
-.titleContainer {
-  display: inline-block;
-  position: relative;
-  height: 100%;
-  margin-bottom: 10px;
-  margin-top: -10px;
-  padding-bottom: 20px;
-}
-
 .image {
   height: 40px;
+  margin: 15px 0;
 }
