--- a/app/components/preview/preview.css
+++ b/app/components/preview/preview.css
@@ -1,7 +1,7 @@
 .previewImg {
-  background-image: url('http://xpenology.org/wp-content/themes/qaengine/img/default-thumbnail.jpg');
+  background-image: url('https://openclipart.org/image/2400px/svg_to_png/231068/3D-Isometric-Cardboard-Box.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 500px;
+  height: 410px;
 }
