--- a/app/components/messages/message-body.css
+++ b/app/components/messages/message-body.css
@@ -1,9 +1,9 @@
 .message {
-  width: 420px;
-  padding: 10px;
+  width: 100%;
+  padding: 5px;
   text-align: center;
-  border-radius: 10px;
-  margin: 20px auto;
+  margin: 15px auto;
+  box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
 }
 
 .success {
@@ -14,6 +14,6 @@
 
 .error {
   composes: message;
-  background-color: red;
+  background-color: #f39c12;
   color: white;
 }
