--- a/app/components/preview/preview.css
+++ b/app/components/preview/preview.css
@@ -1,7 +1,4 @@
-.previewImg {
-  background-image: url('../../assets/img/box.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 560px;
+.preview canvas {
+  margin: 0 auto;
+  display: block;
 }
