--- a/app/components/order/order.css
+++ b/app/components/order/order.css
@@ -1,3 +1,9 @@
-.container {
-
+.loadingGif {
+  height: 40px;
+  width: 40px;
+  background-image: url('../../assets/img/loading.gif');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: table;
+  margin: 0 auto;
 }
