--- a/app/components/dropdowns/feature-style.css
+++ b/app/components/dropdowns/feature-style.css
@@ -22,6 +22,7 @@
 .feature {
 	box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
   width: 100%;
-  margin: 0 0 5px;
+  width: 48%;
+  margin: 5px 1%;
   float: left;
 }
