--- a/app/components/preview/preview.css
+++ b/app/components/preview/preview.css
@@ -2,3 +2,9 @@
   margin: 0 auto;
   display: block;
 }
+
+.preview {
+  background-position: center;
+  height: 300px;
+  background-image: url('../../assets/img/box.png');
+}
